# goflyto

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: df88e8bbbbc7_initial.py
goflyto/api/: app.py  errors.py  middleware.py
goflyto/api/routes/: search.py
goflyto/core/: config.py  database.py  logging.py
goflyto/models/: db.py  flight.py
goflyto/services/: cache.py  duffel.py  optimizer.py  vertex.py
goflyto/services/providers/: base.py  duffel.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.module.css  App.tsx  api.ts  errors.ts  index.css  main.tsx  searchSteps.ts  theme.ts  types.ts  utils.ts
web/src/components/: NaturalSearch.module.css  NaturalSearch.tsx  Results.module.css  Results.tsx  SearchBar.module.css  SearchBar.tsx
web/src/components/errors/: ErrorScreen.tsx
web/src/components/layout/: AppShell.tsx  NavDrawer.tsx  TopBar.tsx
web/src/components/results/: FlightCard.tsx  FlightLeg.tsx  ResultsFilters.tsx  ResultsSummary.tsx  StrategyNotes.tsx
web/src/components/search/: AirportSelect.tsx  NaturalSearch.tsx  SearchForm.tsx
web/src/context/: SearchContext.tsx
web/src/screens/: AiScreen.tsx  ResultsScreen.tsx  SearchScreen.tsx  SearchingScreen.tsx
